Bug 1473742 - Fix printing fonts loaded with JS API. r=jfkthame

Copy over non-rule font faces to the static clone document that is used
during printing.

MozReview-Commit-ID: 8ggNrCcVpEK